syntax = "proto3";

package users;

message User {
  string username = 1;
  string password = 2;
  optional int64 id = 3;
}

message Username {
  string username = 1;
}

service UserService {
  rpc AddUser(User) returns (User);
  rpc GetUserByUsername(Username) returns (User);
}